--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section id="about">
     <div class="about-content">
       <div class="about-text">
-        <h2>About Me</h2>
+        <h2>About Myself</h2>
         <p>As a passionate and detail-oriented data enthusiast, I am committed to transforming raw data into actionable insights that drive meaningful decisions. With a strong foundation in analytical thinking and problem-solving, I am currently sharpening my skills to excel in the dynamic field of data analytics.</p>
         <p>My journey began with a Bachelor’s degree, and I am continuously expanding my expertise by exploring advanced analytics tools and techniques. I am particularly interested in leveraging data visualization, predictive modeling, and business intelligence to address real-world challenges.</p>
         <p>This goal reflects my drive to combine data analytics with strategic leadership, enabling me to tackle complex business problems with innovative, data-driven solutions.</p>
